--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,16 @@
-<h1>Attemping new github page!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title> 
+    <link rel="stylesheet" href="Index.css">
+    <script defer src="Index.js"></script>
+</head>
+<body>
+    <h1 id="Bold-Text">
+        GitHub creation page!
+    </h1>
+</body>
+</html>
